--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.2",
     "express-validation": "^4.1.1",
     "http-error": "^0.0.6",
+    "morgan": "^1.10.0",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
     "tedious": "^18.6.1"
